Fixed extra spacing in contact form inputs

--- a/david2020/src/app/sections/contact/contact.component.scss
+++ b/david2020/src/app/sections/contact/contact.component.scss
@@ -4,7 +4,7 @@ b {
   font-size: 1.1rem;
 }
 label {
-  width: 100%;
+  position: absolute;
 }
 input,
 textarea {
